<resources>
    <string name="app_name">TestNavigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="res">Restaurants</string>
    <string name="chinese">Chinese and Thai</string>
    <string name="meat">Meat Lover</string>
    <string name="cake">Cakes and Pastry</string>
    <string name="settings">Settings</string>
</resources>
